# Researcher

./: .copilot-instructions.md  .gitignore  AUTOMATED_KB.md  CODE_ANALYZER_AGENT.md  COPILOT_CLI_GUIDE.md  DECISION_LOG_AGENT.md  EXTENDING.md  HIERARCHICAL_PLANNER_AGENT.md  INSTALL.md  LEARNING_PATH_AGENT.md  MCP_SETUP.md  PIPELINE_MANAGER_AGENT.md  PROJECT_SUMMARY.md  README.md  SWARM_COORDINATOR_AGENT.md  USAGE_EXAMPLES.md  demo-coordinators.sh  kb-cli  kb.py  package.json  pyproject.toml
docs/: AUTOMATED_KB.md  COPILOT_CLI_GUIDE.md
docs/agents/coordinators/: HIERARCHICAL_PLANNER_AGENT.md  PIPELINE_MANAGER_AGENT.md  SWARM_COORDINATOR_AGENT.md
docs/agents/specialists/: CODE_ANALYZER_AGENT.md  CRITIC_AGENT.md  DECISION_LOG_AGENT.md  DOMAIN_EXPERT_AGENT.md  GAP_DETECTOR_AGENT.md  LEARNING_PATH_AGENT.md  MONITOR_AGENT.md  QUANTITATIVE_AGENT.md  SYNTHESIZER_AGENT.md
docs/examples/: demo-coordinators.sh
knowledge-base/: README.md
knowledge-base/assets/: .gitkeep
knowledge-base/entries/: .gitkeep
researcher/: __init__.py  cli.py  core.py  kb_analysis.py  kb_decisions.py  kb_domains.py  kb_quality.py  kb_reports.py  kb_router.py  kb_spawn.py  kb_vectors.py  kb_verify.py
researcher_kb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: cli.ts  mcp-server.ts
src/commands/: init.ts  knowledge.ts  parallel-research.ts  research.ts  search.ts  structured-research.ts  tree-research.ts
src/knowledge-base/: knowledge-base.ts
src/research/: research-agent.ts  structured-research-agent.ts  tree-research-agent.ts  web-searcher.ts
