[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "researcher-kb"
version = "0.1.0"
description = "Multi-agent research orchestration system"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[project.scripts]
kb = "researcher.cli:main"

[tool.setuptools.packages.find]
include = ["researcher*"]

[tool.setuptools.package-data]
researcher = ["agents/**/*.md"]
